# project-euler

./: .gitignore  README.md  hie.yaml  package.yaml  project-euler.cabal
src/: Utils.hs  problem-001.hs  problem-002.hs  problem-003.hs  problem-004.hs  problem-005.hs  problem-006.hs
src/ProjectEuler/: Problem001.hs  Problem002.hs  Problem003.hs  Problem004.hs  Problem005.hs  Problem006.hs  Problem007.hs  Problem008.hs  Problem009.hs  Problem010.hs
src/Shared/: Fibonacci.hs  PrimeFactors.hs  Primes.hs
test/ProjectEuler/: Problem001Spec.hs  Problem002Spec.hs  Problem003Spec.hs  Problem004Spec.hs  Problem005Spec.hs  Problem006Spec.hs  Problem007Spec.hs  Problem008Spec.hs  Problem009Spec.hs  Problem010Spec.hs
